--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,29 @@
-spring.application.name=Kitchen Online Food Ordering
+spring.application.name=Kitchen-Online Food Ordering
+
+#Db connection
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/aashif's_kitchen
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.jpa.show-sql: true #(if you want to enable SQL logging)
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect (remove or comment out this line)
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+# file uoloading.
+#spring.servlet.multipart.max-file-size=10MB
+#spring.servlet.multipart.max-request-size=10MB
+#project.image =images/
+
+
+# Enable SQL logging for Hibernate..
+
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
+#logging.level.org.springframework.security=DEBUG
+
+# swagger
+#springdoc.packagesToScan=package com.blog.app.blog_controller,
+#springdoc.pathsToMatch=/api/auth/**, /v3/api-docs,/api/**,/v2/api-docs
